--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build-storybook": "lerna run build-storybook",
     "generate-test-data-service": "lerna run --scope @amplication/data-service-generator generate-test-data-service",
     "setup:dev": "ts-node ./script/setup.ts",
-    "docker:dev": "docker-compose -f docker-compose.dev.yml up -d"
+    "docker:dev": "docker-compose -f docker-compose.dev.yml --env-file .env.docker-compose up"
   },
   "dependencies": {
     "@nestjs/common": "^8.4.7",
