Convert nestjs-prisma to native prisma service

--- a/ee/packages/amplication-git-pull-service/tsconfig.app.json
+++ b/ee/packages/amplication-git-pull-service/tsconfig.app.json
@@ -8,5 +8,5 @@
     "target": "es2015"
   },
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
-  "include": ["src/main.ts"]
+  "include": ["src/**/*.ts"]
 }
