--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 node_modules/
-terraform/envs/production/.terraform.lock.hcl
-terraform/envs/dev/.terraform.lock.hcl
 lerna-debug.log
-terraform/envs/*/.terraform.lock.hcl
 .DS_Store
 .idea/
 secrets/
@@ -12,3 +9,4 @@ values-secret*
 dist/
 packages/.server-id
 .amplication/storage/
+.env.local
