Fix ts-node compilation

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,5 +19,10 @@
       "@amplication/kafka": ["packages/amplication-kafka/src/index.ts"]
     }
   },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  },
   "exclude": ["node_modules", "tmp"]
 }
