Migrate amplication-prisma-db to Nx

--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
     "ora": "5.4.0",
     "react-query": "^3.39.1",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.5.7",
     "simple-git": "^3.14.1",
-    "ts-node": "~10.8.0",
     "winston": "3.3.4",
     "winston-cloud-logging": "^1.0.2"
   },
@@ -54,6 +55,7 @@
     "@graphql-codegen/cli": "2.6.3",
     "@graphql-codegen/typescript": "2.4.1",
     "@nestjs/cli": "^8.2.8",
+    "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.7",
     "@nrwl/nest": "^14.8.2",
     "@nrwl/node": "^14.8.2",
@@ -66,6 +68,11 @@
     "@types/normalize-path": "^3.0.0",
     "@types/semver": "^7.3.9",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "graphql": "^15.3.0",
     "jest": "^27.5.1",
     "jest-mock-extended": "^2.0.9",
@@ -74,8 +81,11 @@
     "prettier": "^2.7.1",
     "prisma": "^3.15.2",
     "semver": "^7.3.7",
+    "source-map-support": "^0.5.21",
     "supertest": "^4.0.2",
     "ts-jest": "27.1.4",
+    "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
     "type-fest": "^0.11.0",
     "typescript": "^4.8.4"
   },
