--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@amplication/prisma-db": ["packages/amplication-prisma-db/src/index.ts"],
       "@amplication/kafka": ["packages/amplication-kafka/src/index.ts"]
     }
   },
