--- a/nx.json
+++ b/nx.json
@@ -34,6 +34,9 @@
     },
     "prepare": {
       "dependsOn": ["^prepare"]
+    },
+    "lint": {
+      "inputs": ["default", "{workspaceRoot}/.eslintrc.json"]
     }
   }
 }
