--- a/package.json
+++ b/package.json
@@ -30,24 +30,29 @@
     "@nestjs/platform-express": "^8.4.7",
     "@nestjs/serve-static": "^2.2.2",
     "@prisma/client": "^3.15.2",
+    "ast-types": "^0.14.2",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.0",
     "fs-extra": "^9.1.0",
+    "json-schema": "^0.4.0",
     "kafkajs": "^1.16.0",
     "lerna": "5.5.2",
+    "lodash": "^4.17.21",
     "nest-access-control": "^2.2.0",
     "nest-morgan": "^1.0.1",
     "nest-winston": "^1.7.0",
     "nestjs-prisma": "^0.16.0",
     "octokit": "^1.8.1",
     "ora": "5.4.0",
+    "prisma-schema-dsl": "^1.1.5",
     "react-query": "^3.39.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.7",
     "simple-git": "^3.14.1",
+    "tslib": "^2.3.0",
     "winston": "3.3.4",
     "winston-cloud-logging": "^1.0.2"
   },
@@ -57,6 +62,10 @@
     "@nestjs/cli": "^8.2.8",
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.7",
+    "@nrwl/eslint-plugin-nx": "14.8.2",
+    "@nrwl/jest": "14.8.2",
+    "@nrwl/js": "14.8.2",
+    "@nrwl/linter": "14.8.2",
     "@nrwl/nest": "^14.8.2",
     "@nrwl/node": "^14.8.2",
     "@nrwl/workspace": "^14.8.2",
@@ -64,6 +73,7 @@
     "@types/express": "^4.17.14",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.2",
+    "@types/json-schema": "^7.0.11",
     "@types/node": "^18.7.23",
     "@types/normalize-path": "^3.0.0",
     "@types/semver": "^7.3.9",
@@ -73,9 +83,13 @@
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "fast-glob": "^3.2.12",
     "graphql": "^15.3.0",
     "jest": "^27.5.1",
+    "jest-environment-jsdom": "28.1.1",
     "jest-mock-extended": "^2.0.9",
+    "json-schema-to-typescript": "^10.1.5",
+    "normalize-path": "^3.0.0",
     "npm-run-all": "^4.1.5",
     "nx": "^14.8.2",
     "prettier": "^2.7.1",
