--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,8 +16,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@amplication/prisma-db": ["packages/amplication-prisma-db/src/index.ts"],
-      "@amplication/kafka": ["packages/amplication-kafka/src/index.ts"]
+      "@amplication/code-gen-types": [
+        "packages/amplication-code-gen-types/src/index.ts"
+      ],
+      "@amplication/kafka": ["packages/amplication-kafka/src/index.ts"],
+      "@amplication/prisma-db": ["packages/amplication-prisma-db/src/index.ts"]
     }
   },
   "ts-node": {
