Trying to figure out git-service

--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "docker:dev": "docker-compose -f docker-compose.dev.yml --env-file .env.docker-compose up"
   },
   "dependencies": {
+    "@apollo/gateway": "^0.42.3",
     "@nestjs/common": "^8.4.7",
     "@nestjs/config": "^1.2.1",
     "@nestjs/core": "^8.4.7",
+    "@nestjs/graphql": "^9.1.2",
     "@nestjs/microservices": "^8.4.7",
     "@nestjs/platform-express": "^8.4.7",
     "@nestjs/serve-static": "^2.2.2",
+    "@octokit/openapi-types": "^2.3.1",
     "@prisma/client": "^3.15.2",
     "ast-types": "^0.14.2",
     "bcrypt": "^5.0.1",
@@ -40,11 +43,13 @@
     "kafkajs": "^1.16.0",
     "lerna": "5.5.2",
     "lodash": "^4.17.21",
+    "minimatch": "^5.1.0",
     "nest-access-control": "^2.2.0",
     "nest-morgan": "^1.0.1",
     "nest-winston": "^1.7.0",
     "nestjs-prisma": "^0.16.0",
     "octokit": "^1.8.1",
+    "octokit-plugin-create-pull-request": "^3.13.1",
     "ora": "5.4.0",
     "prisma-schema-dsl": "^1.1.5",
     "react-query": "^3.39.1",
@@ -74,6 +79,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.2",
     "@types/json-schema": "^7.0.11",
+    "@types/minimatch": "^3.0.5",
     "@types/node": "^18.7.23",
     "@types/normalize-path": "^3.0.0",
     "@types/semver": "^7.3.9",
@@ -82,9 +88,11 @@
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-lerna": "^2.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "fast-glob": "^3.2.12",
-    "graphql": "^15.3.0",
+    "graphql": "^15.8.0",
     "jest": "^27.5.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-mock-extended": "^2.0.9",
@@ -100,6 +108,7 @@
     "ts-jest": "27.1.4",
     "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^3.14.1",
     "type-fest": "^0.11.0",
     "typescript": "^4.8.4"
   },
