--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,10 @@
         "packages/amplication-code-gen-types/src/index.ts"
       ],
       "@amplication/kafka": ["packages/amplication-kafka/src/index.ts"],
-      "@amplication/prisma-db": ["packages/amplication-prisma-db/src/index.ts"]
+      "@amplication/prisma-db": ["packages/amplication-prisma-db/src/index.ts"],
+      "@amplication/git-service": [
+        "packages/amplication-git-service/src/index.ts"
+      ]
     }
   },
   "ts-node": {
