Migrate git-service as git-utils

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@nrwl/linter": "14.8.2",
     "@nrwl/nest": "^14.8.2",
     "@nrwl/node": "^14.8.2",
+    "@nrwl/web": "14.8.2",
     "@nrwl/workspace": "^14.8.2",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
@@ -86,6 +87,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
+    "babel-jest": "28.1.1",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-lerna": "^2.0.0",
