--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,14 +16,14 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@amplication/amplication-git-utils": [
+        "packages/amplication-git-utils/src/index.ts"
+      ],
       "@amplication/code-gen-types": [
         "packages/amplication-code-gen-types/src/index.ts"
       ],
       "@amplication/kafka": ["packages/amplication-kafka/src/index.ts"],
-      "@amplication/prisma-db": ["packages/amplication-prisma-db/src/index.ts"],
-      "@amplication/git-service": [
-        "packages/amplication-git-service/src/index.ts"
-      ]
+      "@amplication/prisma-db": ["packages/amplication-prisma-db/src/index.ts"]
     }
   },
   "ts-node": {
