--- a/packages/amplication-server/project.json
+++ b/packages/amplication-server/project.json
@@ -1,7 +1,7 @@
 {
-  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/amplication-server/src",
-  "projectType": "library",
+  "projectType": "application",
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
