--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -49,3 +49,4 @@ GITHUB_APP_INSTALLATION_URL=[github-app-installation-url]
 KAFKA_BROKERS="["localhost:9092"]"
 KAFKA_CLIENT_ID='server-queue-client'
 KAFKA_GROUP_ID='main-server-group'
+KAFKA_REPOSITORY_PUSH_QUEUE='git.external.push.event.0'
