--- a/packages/amplication-git-service/package.json
+++ b/packages/amplication-git-service/package.json
@@ -20,8 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@amplication/nest-logger-module": "^1.0.2",
     "@apollo/gateway": "0.42.3",
-    "@nestjs/common": "8.2.3",
+    "@nestjs/common": "8.4.3",
     "@nestjs/config": "1.1.5",
     "@nestjs/core": "8.2.3",
     "@nestjs/graphql": "9.1.2",
