Fix linting in amplication-server

--- a/packages/amplication-server/tsconfig.app.json
+++ b/packages/amplication-server/tsconfig.app.json
@@ -7,6 +7,6 @@
     "emitDecoratorMetadata": true,
     "target": "es2015"
   },
-  "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
+  "exclude": ["jest.config.e2e.ts", "**/*.spec.ts", "**/*.test.ts"],
   "include": ["**/*.ts"]
 }
