--- a/packages/amplication-server/tsconfig.spec.json
+++ b/packages/amplication-server/tsconfig.spec.json
@@ -5,5 +5,5 @@
     "module": "commonjs",
     "types": ["jest", "node"]
   },
-  "include": ["jest.config.ts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
+  "include": ["jest.config.e2e.ts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
 }
