--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -27,6 +27,7 @@ SERVICE_JWT_SECRET=/QN%^4uefRUR%]Ar
 # Storage
 DEFAULT_DISK=local
 LOCAL_DISK_ROOT=./artifacts
+BUILD_INPUT_FILE_NAME=input.json
 
 # Build apps
 CONTAINER_BUILDER_DEFAULT=docker
