--- a/helm/charts/services/amplication-server/templates/external-name.yaml
+++ b/helm/charts/services/amplication-server/templates/external-name.yaml
@@ -1,11 +1,11 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: amplication-server-ext
+  name: webhook-eventsource
   namespace: next
 spec:
   type: ExternalName
-  externalName: amplication-server-ext.next.svc.cluster.local
+  externalName: amplication-server-ext.next-dsg.svc.cluster.local
   ports:
   - port: 80
-    targetPort: 3000
+    targetPort: 12000
