amplication-storage-gateway: nx migration

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.4.7",
     "@nestjs/serve-static": "^2.2.2",
+    "@nestjs/swagger": "^5.2.1",
     "@ntegral/nestjs-sendgrid": "^1.0.0",
     "@octokit/app": "^12.0.7",
     "@octokit/auth-app": "^3.6.1",
@@ -54,8 +55,10 @@
     "dotenv": "^16.0.0",
     "fs-extra": "^9.1.0",
     "get-stream": "^6.0.1",
+    "glob": "^8.0.3",
     "graphql-type-json": "^0.3.2",
     "json-schema": "^0.4.0",
+    "jsonwebtoken": "^8.5.1",
     "kafkajs": "^1.16.0",
     "lerna": "5.5.2",
     "lodash": "^4.17.21",
@@ -63,6 +66,7 @@
     "nest-access-control": "^2.2.0",
     "nest-morgan": "^1.0.1",
     "nest-winston": "^1.7.0",
+    "nestjs-paginate": "^2.6.0",
     "nestjs-prisma": "^0.16.0",
     "node-fetch": "^2.6.7",
     "node-jose": "^2.1.1",
@@ -71,6 +75,7 @@
     "ora": "5.4.0",
     "passport": "^0.5.3",
     "passport-github2": "^0.1.12",
+    "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
     "php-serialize": "^4.0.2",
     "pluralize": "^8.0.0",
@@ -81,6 +86,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.7",
     "simple-git": "^3.14.1",
+    "swagger-ui-express": "^4.5.0",
     "tar-stream": "^2.2.0",
     "ts-morph": "^13.0.3",
     "tslib": "^2.3.0",
@@ -108,9 +114,11 @@
     "@types/dockerode": "^2.5.34",
     "@types/express": "^4.17.14",
     "@types/fs-extra": "^9.0.13",
+    "@types/glob": "^7.2.0",
     "@types/graphql-type-json": "^0.3.2",
     "@types/jest": "^27.0.2",
     "@types/json-schema": "^7.0.11",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.186",
     "@types/minimatch": "^3.0.5",
     "@types/node": "^18.7.23",
@@ -119,6 +127,7 @@
     "@types/passport": "^1.0.11",
     "@types/passport-github": "^1.1.7",
     "@types/passport-github2": "^1.2.5",
+    "@types/passport-http": "^0.3.9",
     "@types/passport-jwt": "^3.0.7",
     "@types/pluralize": "^0.0.29",
     "@types/query-string": "^6.3.0",
