--- a/packages/amplication-storage-gateway/.env
+++ b/packages/amplication-storage-gateway/.env
@@ -12,3 +12,6 @@ CHECK_USER_ACCESS_TOPIC="auth.user.access"
 KAFKA_BROKERS="["localhost:9092"]"
 KAFKA_CLIENT_ID='storage-queue-client'
 KAFKA_GROUP_ID='storage-server-group'
+KAFKA_REPOSITORY_PUSH_QUEUE="git.external.push.event.0"
+
+GITHUB_APP_APP_ID=219560
