--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cron": "^1.8.2",
+    "cronstrue": "^1.125.0",
     "cuid": "^2.1.8",
     "date-fns": "^2.29.3",
     "dir-compare": "^4.0.0",
@@ -81,6 +83,7 @@
     "pluralize": "^8.0.0",
     "prisma-schema-dsl": "^1.1.5",
     "query-string": "^7.1.1",
+    "rc": "^1.2.8",
     "react-query": "^3.39.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -111,6 +114,7 @@
     "@nrwl/workspace": "^14.8.2",
     "@types/adm-zip": "^0.4.34",
     "@types/bcrypt": "^5.0.0",
+    "@types/cron": "^1.7.3",
     "@types/dockerode": "^2.5.34",
     "@types/express": "^4.17.14",
     "@types/fs-extra": "^9.0.13",
@@ -131,6 +135,7 @@
     "@types/passport-jwt": "^3.0.7",
     "@types/pluralize": "^0.0.29",
     "@types/query-string": "^6.3.0",
+    "@types/rc": "^1.2.1",
     "@types/semver": "^7.3.9",
     "@types/supertest": "^2.0.12",
     "@types/tar-stream": "^2.2.2",
