--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@octokit/oauth-authorization-url": "^4.3.3",
     "@octokit/openapi-types": "^2.3.1",
     "@octokit/rest": "^18.12.0",
+    "@octokit/webhooks": "^9.26.0",
+    "@octokit/webhooks-types": "^5.8.0",
     "@prisma/client": "^3.15.2",
     "@sendgrid/mail": "^7.7.0",
     "@slynova/flydrive": "^1.0.3",
@@ -55,6 +57,7 @@
     "dir-compare": "^4.0.0",
     "dockerode": "^3.3.4",
     "dotenv": "^16.0.0",
+    "eventsource": "^2.0.2",
     "fs-extra": "^9.1.0",
     "get-stream": "^6.0.1",
     "glob": "^8.0.3",
@@ -116,6 +119,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cron": "^1.7.3",
     "@types/dockerode": "^2.5.34",
+    "@types/eventsource": "^1.1.9",
     "@types/express": "^4.17.14",
     "@types/fs-extra": "^9.0.13",
     "@types/glob": "^7.2.0",
