--- a/packages/amplication-code-gen-types/.eslintrc.json
+++ b/packages/amplication-code-gen-types/.eslintrc.json
@@ -4,7 +4,10 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-empty-interface": "off"
+      }
     },
     {
       "files": ["*.ts", "*.tsx"],
