--- a/packages/amplication-server/.eslintrc.json
+++ b/packages/amplication-server/.eslintrc.json
@@ -8,7 +8,7 @@
     // "plugin:import/warnings",
     // "plugin:import/typescript"
   ],
-  "ignorePatterns": ["!**/*"],
+  "ignorePatterns": ["!**/*", "migration-scripts"],
   "parserOptions": {
     "project": ["packages/amplication-server/tsconfig.*?.json"]
   },
@@ -37,11 +37,7 @@
         "selector": "typeLike",
         "format": ["PascalCase"]
       },
-      { "selector": "enumMember", "format": ["PascalCase"] },
-      {
-        "selector": "objectLiteralProperty",
-        "format": ["camelCase", "UPPER_CASE"]
-      }
+      { "selector": "enumMember", "format": ["PascalCase"] }
     ],
     "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
     "@typescript-eslint/no-floating-promises": "error"
