--- a/ee/packages/amplication-git-push-webhook-service/.eslintrc.json
+++ b/ee/packages/amplication-git-push-webhook-service/.eslintrc.json
@@ -46,8 +46,7 @@
         "format": ["camelCase", "UPPER_CASE"]
       }
     ],
-    "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
-    "@typescript-eslint/no-floating-promises": "error"
+    "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }]
   },
   "overrides": []
 }
