update webhook url

--- a/helm/charts/amplication/values-next.yaml
+++ b/helm/charts/amplication/values-next.yaml
@@ -66,7 +66,7 @@ amplication-server:
 
       DOCKER_HOST: tcp://docker:2375
 
-      DSG_RUNNER_URL: webhook-eventsource-svc.next-dsg.svc.cluster.local:12000/example
+      DSG_RUNNER_URL: http://webhook-eventsource-svc.next-dsg.svc.cluster.local:12000/example
 
       #GitHub App
       GITHUB_APP_APP_ID: "225471"
