--- a/package.json
+++ b/package.json
@@ -112,8 +112,10 @@
     "@nrwl/linter": "14.8.2",
     "@nrwl/nest": "^14.8.2",
     "@nrwl/node": "^14.8.2",
+    "@nrwl/nx-cloud": "^14.7.0",
     "@nrwl/web": "14.8.2",
     "@nrwl/workspace": "^14.8.2",
+    "@nx-tools/nx-docker": "^3.0.4",
     "@types/adm-zip": "^0.4.34",
     "@types/bcrypt": "^5.0.0",
     "@types/cron": "^1.7.3",
