--- a/packages/amplication-kafka/project.json
+++ b/packages/amplication-kafka/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "amplication-kafka",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/amplication-kafka/src",
   "projectType": "library",
