--- a/packages/amplication-server/project.json
+++ b/packages/amplication-server/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "amplication-server",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/amplication-server/src",
   "projectType": "application",
