--- a/helm/charts/dsg-runner-infra/templates/sensor.yaml
+++ b/helm/charts/dsg-runner-infra/templates/sensor.yaml
@@ -33,7 +33,10 @@ spec:
                       - name: dsg-container
                         image: "407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-data-service-generator:0.0.10"
                         command: ["sh", "-c"]
-                        args: [ "cd /app/packages/amplication-data-service-generator; npm run generate-code -- /efs/dsg-jobs/$(BUILD_ID)/input.json /efs/dsg-jobs/$(BUILD_ID)/output"]
+                        args:
+                          [
+                            "cd /app/packages/amplication-data-service-generator; npm run generate-code -- /efs/dsg-jobs/$(BUILD_ID)/input.json /efs/dsg-jobs/$(BUILD_ID)/output",
+                          ]
                         env:
                           - name: BUILD_ID
                             value: null # provided in parameters
@@ -47,7 +50,7 @@ spec:
                       - name: persistent-storage
                         persistentVolumeClaim:
                           claimName: efs-claim-{{ .Values.envName }}-dsg
-                ttlSecondsAfterFinished: {{ .Values.job.ttlSecondsAfterFinished }}
+                ttlSecondsAfterFinished: "{{ .Values.job.ttlSecondsAfterFinished }}"
                 backoffLimit: 0
           parameters:
             - src:
