change path to builds

--- a/packages/amplication-storage-gateway/.env
+++ b/packages/amplication-storage-gateway/.env
@@ -12,3 +12,5 @@ CHECK_USER_ACCESS_TOPIC="auth.user.access"
 KAFKA_BROKERS="["localhost:9092"]"
 KAFKA_CLIENT_ID='storage-queue-client'
 KAFKA_GROUP_ID='storage-server-group'
+
+BUILD_OUTPUT_FOLDER=output
