Add implicit dependencies

--- a/ee/packages/amplication-git-pull-service/project.json
+++ b/ee/packages/amplication-git-pull-service/project.json
@@ -2,6 +2,7 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "ee/packages/amplication-git-pull-service/src",
   "projectType": "application",
+  "implicitDependencies": ["amplication-kafka"],
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
