--- a/packages/amplication-git-pull-request-service/project.json
+++ b/packages/amplication-git-pull-request-service/project.json
@@ -3,6 +3,10 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/amplication-git-pull-request-service/src",
   "projectType": "application",
+  "implicitDependencies": [
+    "amplication-nest-logger-module",
+    "amplication-git-utils"
+  ],
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
