--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -8,23 +8,33 @@ on:
   pull_request:
 
 jobs:
-  main:
-    name: Nx Cloud - Main Job
-    uses: nrwl/ci/.github/workflows/nx-cloud-main.yml@v0.7
-    with:
-      number-of-agents: 3
-      init-commands: |
-        npx nx-cloud start-ci-run --stop-agents-after="build" --agent-count=3
-      parallel-commands: |
-        npx nx-cloud record -- npx nx workspace-lint
-        npx nx-cloud record -- npx nx format:check
-      parallel-commands-on-agents: |
-        npx nx affected --target=lint --parallel=3
-        npx nx affected --target=test --parallel=3 --ci --code-coverage
-        npx nx affected --target=build --parallel=3
+  # main:
+  #   name: Nx Cloud - Main Job
+  #   uses: nrwl/ci/.github/workflows/nx-cloud-main.yml@v0.7
+  #   with:
+  #     number-of-agents: 3
+  #     init-commands: |
+  #       npx nx-cloud start-ci-run --stop-agents-after="build" --agent-count=3
+  #     parallel-commands: |
+  #       npx nx-cloud record -- npx nx workspace-lint
+  #       npx nx-cloud record -- npx nx format:check
+  #     parallel-commands-on-agents: |
+  #       npx nx affected --target=lint --parallel=3
+  #       npx nx affected --target=test --parallel=3 --ci --code-coverage
+  #       npx nx affected --target=build --parallel=3
 
-  agents:
-    name: Nx Cloud - Agents
-    uses: nrwl/ci/.github/workflows/nx-cloud-agents.yml@v0.7
-    with:
-      number-of-agents: 3
+  docker-build:
+    name: Build
+    runs-on: ubuntu-latest
+    env:
+      NX_BRANCH: ${{ github.head_ref }}
+      NX_CLOUD_DISTRIBUTED_EXECUTION: "false"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: nrwl/nx-set-shas@v3
+      - run: npm ci
+      - run: npx nx workspace-lint
+      - run: npx nx format:check
+      - run: npx nx affected --target=lint --parallel=3
