--- a/package.json
+++ b/package.json
@@ -157,7 +157,7 @@
     "fast-glob": "^3.2.12",
     "google-libphonenumber": "^3.2.31",
     "graphql": "^15.8.0",
-    "jest": "^27.5.1",
+    "jest": "^28.0.8",
     "jest-environment-jsdom": "28.1.1",
     "jest-mock-extended": "^2.0.9",
     "json-schema-to-typescript": "^10.1.5",
@@ -169,7 +169,7 @@
     "semver": "^7.3.7",
     "source-map-support": "^0.5.21",
     "supertest": "^4.0.2",
-    "ts-jest": "27.1.4",
+    "ts-jest": "^28.0.8",
     "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^3.14.1",
