--- a/packages/amplication-prisma-db/project.json
+++ b/packages/amplication-prisma-db/project.json
@@ -21,6 +21,9 @@
     },
     "db:prisma:generate": {
       "executor": "nx:run-commands",
+      "outputs": [
+        "node_modules/@amplication/prisma-clients/amplication-prisma-db"
+      ],
       "options": {
         "command": "prisma generate --schema ./prisma/schema.prisma",
         "cwd": "packages/amplication-prisma-db"
