--- a/packages/amplication-code-gen-types/tsconfig.lib.json
+++ b/packages/amplication-code-gen-types/tsconfig.lib.json
@@ -7,5 +7,5 @@
     "types": ["node"]
   },
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
-  "include": ["**/*.ts"]
+  "include": ["src"]
 }
