--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -34,6 +34,20 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
       - uses: nrwl/nx-set-shas@v3
         with:
           main-branch-name: next
@@ -51,4 +65,4 @@ jobs:
         run: npx nx affected --target=lint --parallel=3
 
       - name: Test
-        run: npx affected --target=test --parallel=3
+        run: npx nx affected --target=test --parallel=3
