--- a/package.json
+++ b/package.json
@@ -158,7 +158,8 @@
     "google-libphonenumber": "^3.2.31",
     "graphql": "^15.8.0",
     "jest": "^27.1.4",
-    "jest-environment-jsdom": "28.1.1",
+    "jest-environment-jsdom": "^27.1.4",
+    "jest-environment-node": "^27.5.1",
     "jest-mock-extended": "^2.0.9",
     "json-schema-to-typescript": "^10.1.5",
     "normalize-path": "^3.0.0",
