--- a/packages/amplication-code-gen-types/project.json
+++ b/packages/amplication-code-gen-types/project.json
@@ -6,6 +6,7 @@
   "targets": {
     "prepare": {
       "executor": "nx:run-commands",
+      "outputs": ["packages/amplication-code-gen-types/src/types"],
       "options": {
         "command": "ts-node ./scripts/generate-types",
         "cwd": "packages/amplication-code-gen-types"
