add build output env

--- a/helm/charts/amplication/values-next.yaml
+++ b/helm/charts/amplication/values-next.yaml
@@ -124,4 +124,5 @@ amplication-storage-gateway:
     env:
       KAFKA_BROKERS: '["amplication-next-cp-kafka-headless:9092"]'
       BASE_BUILDS_FOLDER: /amplication-data/build-data
+      BUILD_OUTPUT_FOLDER: output
       GITHUB_APP_APP_ID: "225471"
